fix projects padding in small devices and overflow-x

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 html, body{
 width: 100%;
+overflow-x: hidden;
 }
 
 
@@ -113,6 +114,12 @@ overflow-x: hidden;
   width: 100%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+ @media (max-width: 575px) { 
+  #projects-section img{
+    padding-top: 1.5rem !important;
+  }  
+ }
 
 .overlay {
   position: absolute;
